--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,20 +27,26 @@ android {
             signingConfig signingConfigs.config
         }
     }
-}
+    sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
+    externalNativeBuild {
+        ndkBuild {
+            path 'build/intermediates/ndk/debug/Android.mk'
+        }
+    }
 
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support:design:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-vector-drawable:28.0.0-alpha3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':openCVLibrary342')
-    implementation 'com.android.support:support-v4:28.0.0-alpha3'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    implementation 'com.android.support:support-dynamic-animation:27.1.1'
-    implementation 'com.obsez.android.lib.filechooser:filechooser:1.1.10'
+    dependencies {
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+        implementation 'com.android.support:design:28.0.0-alpha3'
+        implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+        implementation 'com.android.support:support-vector-drawable:28.0.0-alpha3'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'com.android.support.test:runner:1.0.2'
+        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+        implementation project(':openCVLibrary342')
+        implementation 'com.android.support:support-v4:28.0.0-alpha3'
+        implementation 'com.google.android.gms:play-services-maps:15.0.1'
+        implementation 'com.android.support:support-dynamic-animation:27.1.1'
+        implementation 'com.obsez.android.lib.filechooser:filechooser:1.1.10'
+    }
 }
