--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ android {
     lintOptions {
         abortOnError false
     }
-//    signingConfigs {
-//        config {
-//            keyAlias 'DefectDetectKey'
-//            keyPassword 'Welc0me.'
-//            storeFile file('/home/vamsi/keystores/defect_detect.jks')
-//            storePassword 'Welc0me.'
-//        }
-//    }
+    signingConfigs {
+        config {
+            keyAlias 'DefectDetectKey'
+            keyPassword 'Welc0me.'
+            storeFile file('/home/vamsi/keystores/defect_detect.jks')
+            storePassword 'Welc0me.'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.dpgra.defectdetect"
@@ -27,7 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
     sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
